--- a/demo-jpa/src/main/resources/templates/readingList.html
+++ b/demo-jpa/src/main/resources/templates/readingList.html
@@ -12,6 +12,7 @@
 				<span th:text="${book.title}">Title</span> by <span
 					th:text="${book.author}">Author</span> (ISBN: <span
 					th:text="${book.isbn}">ISBN</span>)
+				<a th:href="'http://www.amazon.com/gp/product/'+ ${book.isbn}+ '/tag=' + ${amazonID}" th:text="${book.title}">Title</a>
 			</dt>
 			<dd class="bookDescription">
 				<span th:if="${book.description}" th:text="${book.description}">Description</span>
@@ -19,6 +20,7 @@
 					available</span>
 			</dd>
 		</dl>
+		
 	</div>
 	<div th:if="${#lists.isEmpty(books)}">
 		<p>You have no books in your book list</p>
@@ -26,6 +28,7 @@
 	<hr />
 	<h3>Add a book</h3>
 	<form method="POST">
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 		<label for="title">Title:</label> <input
 			type="text" name="title" size="50"></input><br /> <label
 			for="author">Author:</label> <input type="text" name="author"
