--- a/demo-jpa/src/main/resources/templates/readingList.html
+++ b/demo-jpa/src/main/resources/templates/readingList.html
@@ -28,7 +28,7 @@
 	<hr />
 	<h3>Add a book</h3>
 	<form method="POST">
-		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+		<input th:if="${_csrf !=null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${ _csrf.token}" />
 		<label for="title">Title:</label> <input
 			type="text" name="title" size="50"></input><br /> <label
 			for="author">Author:</label> <input type="text" name="author"
